# S2RM

./: .gitignore  LICENSE  README.md  S2RM_backend.py  S2RM_frontend.py  blocks.json  build.bat  build.sh  build_exe.py  constants.py  download_game_data.py  forwardporting.py  helpers.py  items.java  items.json  items_json_to_list.py  limited_stacks.json  main.py  parse_mc_data.py  porting.py  pyproject.toml  raw_materials.json  raw_materials_calc.py  raw_materials_table.json  recipes_raw_mats_database_builder.py
data/: 116_stacks.json  download_game_data.py  entities.java  entities.json  get_116_stacks.py  graph_recipes.py  items.json  items.txt  parse_mc_data.py  recipes_raw_mats_database_builder.py  versioned_game_data.py
data/game/: limited_stack_items.json  raw_materials_table.json
data/test inputs/: Complete Cart-based Storage (nether).litematic  Complete Cart-based Storage (overworld).litematic  debug_world_blocks.litematic
data_scripts/: graph_recipes.py  recipes_raw_mats_database_builder.py  regex_test.py
extractor/: build.gradle  config.json  gradle.properties  semver-cache-mojang-launcher.json  settings.gradle
extractor/artifact-store/: maven-cache.json
minecraft_downloads/: Blocks.java  EntityType.java  Items.java
scripts/: process_release_once.py
scripts_to_generate_raw_mats_4_all_items/: items_json_to_list.py  recipes_raw_mats_database_builder.py
src/: S2RM_backend.py  S2RM_frontend.py  config.json  config.py  constants.py  entity_processing.py  extractor_runner.py  helpers.py  porting.py  resource_path.py  use_config.py  versioned_json.py
(+23 files in other folders)
