[tool.poetry]
name = "s2rm"
version = "0.1.0"
description = "A program that converts a schematic into a raw materials list"
authors = ["ncolyer <ncolyer@not_a_real_email.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
networkx = "^3.4.2"
tqdm = "^4.67.1"
matplotlib = "^3.10.1"
pyside6 = "^6.8.2.1"
litemapy = "^0.10.0b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
