[project]
name = "s2rm"
version = "0.1.0"
description = "Minecraft Schematic to Raw Materials Program"
authors = [{name = "ncolyer", email = "ncolyer@example.com"}]
requires-python = ">=3.12,<3.14"
license = "MIT"
readme = "README.md"
package-mode = false


dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "litemapy (>=0.10.0b0,<0.11.0)",
    "pyside6 (>=6.8.2.1,<7.0.0.0)",
    "networkx (>=3.4.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12.0"

